compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__multiplication_in_pattern_size_is_left_associative.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let a = 2\n  let b = 3\n  let c = 4\n  let assert <<_:bytes-size(a * b * c)>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 2
  let b = 3
  let c = 4
  let assert <<_:bytes-size(a * b * c)>> = <<>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> bitstring().
main() ->
    A = 2,
    B = 3,
    C = 4,
    case <<>> of
        <<_:((A * B) * C)/binary>> = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 6,
                value => _value@1,
                start => 55,
                'end' => 100,
                pattern_start => 66,
                pattern_end => 93
            })
    end.
