compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__negative_size.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  <<1:size(-1)>>\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-spec main() -> bitstring().
main() ->
    <<1:0>>.
