compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__negative_size_test.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "pub fn size_16_variable_test() {\n  let i = 257\n  <<i:size(-1)>>\n}"
---
----- SOURCE CODE
pub fn size_16_variable_test() {
  let i = 257
  <<i:size(-1)>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([size_16_variable_test/0]).

-spec size_16_variable_test() -> bitstring().
size_16_variable_test() ->
    I = 257,
    <<I:0>>.
