compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__qualified_constant_in_pattern_size_expression.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\nimport sizes\n\nconst local_size = 4\n\npub fn go(data) {\n  let assert <<value:size(sizes.multiplier * local_size)>> = data\n  value\n}\n"
---
----- SOURCE CODE

import sizes

const local_size = 4

pub fn go(data) {
  let assert <<value:size(sizes.multiplier * local_size)>> = data
  value
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 6).
-spec go(bitstring()) -> integer().
go(Data) ->
    Value@1 = case Data of
        <<Value:(2 * 4)>> -> Value;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 7,
                        value => _assert_fail,
                        start => 57,
                        'end' => 120,
                        pattern_start => 68,
                        pattern_end => 113})
    end,
    Value@1.
