compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__size_16_literal_test.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "pub fn size_16_literal_test() {\n  <<257:size(16)>>\n}"
---
----- SOURCE CODE
pub fn size_16_literal_test() {
  <<257:size(16)>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([size_16_literal_test/0]).

-spec size_16_literal_test() -> bitstring().
size_16_literal_test() ->
    <<257:16>>.
